--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,10 @@
-.map-container {
-height: 400px;
-}
+.map_container {
+  height: 100vh;
+  width:100vw;
+  position: fixed;
+  top:0;
+  left: 0;
+  }
 
 .sidebar {
 background-color: rgba(35, 55, 75, 0.9);
