--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,20 +1,54 @@
+$spacing: 15px;
+
+html{
+  min-height: 100vh;
+}
 .map_container {
-  height: 100vh;
-  width:100vw;
-  position: fixed;
-  top:0;
-  left: 0;
+    height: 100vh;
+    width:100vw;
+    position: fixed;
+    top:0;
+    left: 0;
+    pointer-events: none;
+    z-index: -1;
   }
 
-.sidebar {
-background-color: rgba(35, 55, 75, 0.9);
-color: #ffffff;
-padding: 6px 12px;
-font-family: monospace;
-z-index: 1;
-position: absolute;
-top: 0;
-left: 0;
-margin: 12px;
-border-radius: 4px;
+  .mapboxgl-ctrl-logo, .mapboxgl-ctrl-bottom-right{
+    display: none !important;
+  }
+
+.home_container{
+  height: 100vh;
+  width:100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.navigation{
+  position: absolute;
+  z-index: 1;
+  bottom: $spacing;
+  left: $spacing;
+}
+.about{
+  position: absolute;
+  z-index: 1;
+  bottom: $spacing;
+  right: $spacing;
+}
+.archive{
+  position: absolute;
+  z-index: 1;
+  top: $spacing;
+  right: $spacing;
+}
+.logo{
+  position: absolute;
+  z-index: 1;
+  top: $spacing;
+  left: $spacing;
+}
+
+.CurrentProject{
+  text-align: center;
 }
