--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,57 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+div, section{
+  box-sizing: border-box;
+}
+
+*{
+	-webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+body{
+  font-family: sans-serif;
+}
+
 $spacing: 15px;
 
 html{
@@ -23,6 +77,7 @@ html{
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 .navigation{
   position: absolute;
@@ -33,8 +88,11 @@ html{
 .about{
   position: absolute;
   z-index: 1;
-  bottom: $spacing;
+  top: $spacing;
   right: $spacing;
+  .about-btn{
+    font-weight: bold;
+  }
 }
 .archive{
   position: absolute;
@@ -42,13 +100,102 @@ html{
   top: $spacing;
   right: $spacing;
 }
-.logo{
-  position: absolute;
+
+.navbar{
+  position: fixed;
+  top:0;
+  left: 0;
+  width: 100%;
+  padding: $spacing;
+  display: flex;
+  justify-content: space-between;
+  font-weight: bold;
   z-index: 1;
-  top: $spacing;
-  left: $spacing;
 }
+
+
 
 .CurrentProject{
   text-align: center;
+}
+
+
+.side-bar{
+    position: fixed;
+    padding:30px;
+    box-sizing: border-box;
+    transform: translateX(100%);
+    width:100vw;
+    top:0px;
+    left:0;
+    height: 100% !important;
+    z-index: 2;
+    background: white;
+    mix-blend-mode: difference;
+}
+.side-content{
+  position: fixed;
+  padding:30px;
+  box-sizing: border-box;
+  transform: translateX(100%);
+  width:100vw;
+  top:0px;
+  left:0;
+  height: 100% !important;
+  display: flex;
+  flex-direction: column;
+  z-index: 3;
+  color:white;
+  mix-blend-mode: exclusion;
+}
+
+// swiper
+
+.swiper-container{
+  mix-blend-mode: exclusion;
+  width:100%;
+  height: 100vh;
+  .swiper-slide{
+    .slide-inner{
+      height: 100vh;
+      padding:$spacing;
+      display: flex;
+      align-items: flex-start;
+      justify-content: flex-end;
+      color:white;
+      mix-blend-mode: difference;
+      flex-direction: column;
+      .title{
+        font-size: 10vw;
+        font-family:sans-serif;
+        color:white;
+        line-height: 10vw;
+        mix-blend-mode: exclusion;
+      }
+
+      span{
+        padding: 8px 15px;
+        font-size: 15px;
+        line-height: 1;
+        border-radius: 50px;
+        background: white;
+        color:black;
+        margin-left: $spacing/2;
+        margin-bottom: $spacing*2;
+      }
+      h4{
+        font-size: 20px;
+        color:white;
+        margin-bottom: $spacing;
+        margin-left: $spacing/2;
+      }
+    }
+  }
+}
+.swiper-pagination-bullet.swiper-pagination-bullet-active{
+  background:white !important;
+}
+.swiper-pagination-bullet{
+  background: #6c6c6c !important;
+  opacity: 1 !important;
 }
