--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -64,6 +64,53 @@ $spacing: 15px;
 html{
   min-height: 100vh;
 }
+
+.loader{
+	height: 100vh;
+	position: fixed;
+	top:0;
+	width:100vw;
+	background: black;
+	z-index: 99;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	overflow: hidden;
+}
+/* SOLAR SYSTEM */
+
+.name-anim {
+	width: 60px;
+	height: 60px;
+	color: white;
+	font-size: 30px;
+  -webkit-animation: spin3D 1.5s linear 0s infinite;
+	font-family:"Söhne";
+	transform-origin: 50% 50%;
+	text-align: center;
+}
+
+
+@keyframes spin {
+  from {
+    transform: rotate(0);
+  }
+  to{
+    transform: rotate(359deg);
+  }
+}
+
+@keyframes spin3D {
+  from {
+    transform: rotate3d(0,0.5,0, 360deg);
+  }
+  to{
+    transform: rotate3d(0deg);
+  }
+}
+
+
+
 .map_container {
     height: 100vh;
     width:100vw;
