--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -154,6 +154,9 @@ html{
 	}
 }
 
+.index-btn{
+	cursor: pointer;
+}
 
 .CurrentProject{
   text-align: center;
@@ -228,6 +231,9 @@ html{
   background: #6c6c6c !important;
   opacity: 1 !important;
 }
+.swiper-container-vertical > .swiper-pagination-bullets{
+	right: 20px !important;
+}
 .swiper-wrapper{
 	.swiper-slide{
 		&:first-child{
@@ -259,17 +265,23 @@ html{
 	padding-top:15vh;
 	.left-col{
 		font-size: 20px;
-		flex:1;
+		width:60%;
 		padding-right: $spacing;
 		p{
 			margin-bottom:$spacing;
 		}
 	}
 	.right-col{
-		flex:1;
+		width:40%;
 		img{
 			width:100%;
 			height: auto;
+		}
+		.info-about{
+			margin-top: $spacing;
+			p{
+				padding-top: 3px;
+			}
 		}
 	}
 }
