--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -244,11 +244,32 @@ html{
 		}
 	}
 }
-
+.side-content-project{
+	position: fixed;
+  padding:15px;
+  box-sizing: border-box;
+  width:100vw;
+  top:0px;
+  left:0;
+  height: 100% !important;
+  z-index: 3;
+  color:#e8f3fe;
+  mix-blend-mode: exclusion;
+	display: flex;
+	overflow: hidden;
+	.left-col{
+		position: sticky;
+		top:15vh;
+		height: 80vh;
+	}
+	.right-col{
+		overflow-y: scroll;
+		height: 100vh;
+	}
+}
 // about
 .side-content{
   position: fixed;
-  padding:30px;
   box-sizing: border-box;
   transform: translateX(100%);
   width:100vw;
