--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -246,25 +246,44 @@ html{
 }
 .side-content-project{
 	position: fixed;
-  padding:15px;
   box-sizing: border-box;
   width:100vw;
+	transform: translateX(100%);
   top:0px;
   left:0;
   height: 100% !important;
   z-index: 3;
-  color:#e8f3fe;
-  mix-blend-mode: exclusion;
 	display: flex;
 	overflow: hidden;
-	.left-col{
-		position: sticky;
-		top:15vh;
-		height: 80vh;
-	}
-	.right-col{
-		overflow-y: scroll;
+	.project-container{
+		width:100%;
+		display: flex;
 		height: 100vh;
+		overflow-y: scroll;
+		.left-col{
+			position: sticky;
+			top:15vh;
+			height: 80vh;
+			width:50%;
+			color:#e8f3fe;
+			mix-blend-mode: exclusion;
+			padding: $spacing;
+			h1{
+				font-size: 50px;
+				margin-bottom: $spacing;
+			}
+			p{
+				line-height: 1.4;
+			}
+		}
+		.right-col{
+			width:50%;
+			img{
+				width:100%;
+				height: auto;
+				display:flex;
+			}
+		}
 	}
 }
 // about
