--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -110,7 +110,6 @@ html{
 }
 
 
-
 .map_container {
     height: 100vh;
     width:100vw;
@@ -143,13 +142,14 @@ html{
   display: flex;
   justify-content: space-between;
 	mix-blend-mode: difference;
-	.logo{
+	.logo h1{
 		color:white;
+		font-family:"Söhne-Bold";
 	}
   z-index: 4;
 	.navlink{
 		color:white;
-		font-family:"Söhne";
+		font-family:"Söhne-Bold";
 		cursor: pointer;
 	}
 }
@@ -163,19 +163,6 @@ html{
 }
 
 
-.side-bar{
-    position: fixed;
-    padding:30px;
-    box-sizing: border-box;
-    transform: translateX(100%);
-    width:100vw;
-    top:0px;
-    left:0;
-    height: 100% !important;
-    z-index: 2;
-    background: #e8f3fe;
-    mix-blend-mode: difference;
-}
 
 // swiper
 .project-navigation{
@@ -226,17 +213,17 @@ html{
 				margin-bottom: 5px;
       }
 
-      span{
-        padding: 10px 18px;
-        font-size: 15px;
-        line-height: 1;
-        border-radius: 60px;
-        background: white;
-				border:1px solid white;
-        color:black;
-				font-family:"Söhne";
-				mix-blend-mode: exclusion;
-      }
+      // span{
+      //   padding: 10px 18px;
+      //   font-size: 15px;
+      //   line-height: 1;
+      //   border-radius: 60px;
+      //   background: white;
+			// 	border:1px solid white;
+      //   color:black;
+			// 	font-family:"Söhne";
+			// 	mix-blend-mode: exclusion;
+      // }
       h4{
         font-size: 20px;
         color:white;
@@ -340,6 +327,24 @@ html{
 	}
 }
 // about
+
+.side-bar{
+    position: fixed;
+    padding:30px;
+    box-sizing: border-box;
+    transform: translateX(100%);
+    width:100vw;
+    top:0px;
+    left:0;
+    height: 100% !important;
+    z-index: 2;
+    background: #e8f3fe;
+		// background: #c8c8c8;
+		// background: #888888;
+    mix-blend-mode: difference;
+}
+
+
 .side-content{
   position: fixed;
   box-sizing: border-box;
@@ -350,7 +355,7 @@ html{
   height: 100% !important;
   z-index: 3;
   color:#e8f3fe;
-  mix-blend-mode: exclusion;
+  // mix-blend-mode: exclusion;
 }
 .side-content{
 	display: flex;
@@ -441,4 +446,163 @@ html{
 	}
 }
 
+}
+
+// pin
+
+.pin:after {
+  content: "";
+  width: 14px;
+  height: 14px;
+  margin: 8px 0 0 8px;
+  background: #e6e6e6;
+  position: absolute;
+  border-radius: 50%;
+}
+
+
+.pulse {
+  background: black;
+  border-radius: 50%;
+  height: 14px;
+  width: 14px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin: 11px 0px 0px -12px;
+  z-index: -2;
+	transform: scale(0.8);
+}
+
+.pulse:after {
+  content: "";
+  border-radius: 50%;
+  height: 40px;
+  width: 40px;
+  position: absolute;
+  margin: -13px 0 0 -13px;
+  animation: pulsate 1s ease-out;
+  animation-iteration-count: infinite;
+  opacity: 0;
+  box-shadow: 0 0 1px 2px black;
+  animation-delay: 1.1s;
+}
+
+@keyframes pulsate {
+  0% {
+    transform: scale(0.1, 0.1);
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1.2, 1.2);
+    opacity: 0;
+  }
+}
+
+
+// button
+
+.button {
+	cursor: pointer;
+	background: white;
+	color:black;
+	padding: 10px 20px;
+	border-radius: 100px;
+	margin: 0;
+	font-family: inherit;
+	font-size: inherit;
+	position: relative;
+	display: inline-block;
+}
+
+.button::before,
+.button::after {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+.button--atlas {
+	font-family: signo, sans-serif;
+	font-weight: 500;
+}
+
+.button--atlas > span {
+	display: inline-block;
+}
+
+.button--atlas:hover > span {
+	opacity: 0;
+}
+
+.marquee {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	overflow: hidden;
+	pointer-events: none;
+}
+
+.marquee__inner {
+	width: -webkit-fit-content;
+	width: -moz-fit-content;
+	width: fit-content;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	position: relative;
+	--offset: 1rem;
+	--move-initial: calc(-25% + var(--offset));
+	--move-final: calc(-50% + var(--offset));
+	-webkit-transform: translate3d(var(--move-initial), 0, 0);
+	        transform: translate3d(var(--move-initial), 0, 0);
+	-webkit-animation: marquee 1.2s linear infinite;
+	        animation: marquee 1.2s linear infinite;
+	-webkit-animation-play-state: paused;
+	        animation-play-state: paused;
+	opacity: 0;
+}
+
+.button--atlas:hover .marquee__inner {
+	-webkit-animation-play-state: running;
+	        animation-play-state: running;
+	opacity: 1;
+	-webkit-transition-duration: 0.4s;
+	     -o-transition-duration: 0.4s;
+	        transition-duration: 0.4s;
+}
+
+.marquee span {
+	text-align: center;
+	white-space: nowrap;
+	padding: 10px 20px;
+}
+
+@-webkit-keyframes marquee {
+	0% {
+		-webkit-transform: translate3d(var(--move-initial), 0, 0);
+		        transform: translate3d(var(--move-initial), 0, 0);
+	}
+
+	100% {
+		-webkit-transform: translate3d(var(--move-final), 0, 0);
+		        transform: translate3d(var(--move-final), 0, 0);
+	}
+}
+
+@keyframes marquee {
+	0% {
+		-webkit-transform: translate3d(var(--move-initial), 0, 0);
+		        transform: translate3d(var(--move-initial), 0, 0);
+	}
+
+	100% {
+		-webkit-transform: translate3d(var(--move-final), 0, 0);
+		        transform: translate3d(var(--move-final), 0, 0);
+	}
 }
