--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -212,7 +212,7 @@ html{
   width:100%;
   height: 100%;
   .swiper-slide{
-		height: 100vh;
+		height: 100%;
 		transition-timing-function:cubic-bezier(0,1.63,.79,1.09);
 		&:first-child{
 			.click-project{
