--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -205,7 +205,7 @@ html{
 
 .slider-custom-cont{
 	width:100%;
-	height: 100%;
+	height: 100vh;
 }
 .swiper-container{
   mix-blend-mode: exclusion;
@@ -282,6 +282,9 @@ html{
 .swiper-pagination-bullet{
   background: #6c6c6c !important;
   opacity: 1 !important;
+	&:focus{
+		outline: none !important;
+	}
 }
 .swiper-container-vertical > .swiper-pagination-bullets{
 	right: 20px !important;
@@ -466,6 +469,8 @@ html{
 // mobile
 
 @media screen and (max-width: 768px) {
+
+
 	.navbar .logo h1{
 		font-size: 18px;
 		line-height: 1;
@@ -480,7 +485,11 @@ html{
 	.swiper-container .swiper-slide .slide-inner .title{
 		font-size: 40px;
 		line-height: 44px;
+		margin-bottom: 40px;
 		margin-bottom: 0;
+	}
+	.swiper-container .swiper-slide .slide-inner.active .click-project{
+		display: none;
 	}
 	.swiper-wrapper .swiper-slide:first-child .title{
 		font-size: 30px;
