--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -482,6 +482,9 @@ html{
 	.navbar{
 		padding: $spacing 20px;
 	}
+	.swiper-container .swiper-slide .slide-inner{
+		height: 100vh;
+	}
 	.swiper-container .swiper-slide .slide-inner .title{
 		font-size: 40px;
 		line-height: 44px;
