fix title hover

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -261,10 +261,10 @@ html{
 				cursor: pointer;
 				transition: .1s ease;
 				&:hover{
-					color:#6e6e6e !important;
+					color:#6e6e6e;
 				}
 				&:active{
-					color:#6e6e6e !important;
+					color:#6e6e6e;
 				}
       }
       h4{
