--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -61,8 +61,13 @@ h1,h2,h3,h4,h5,a,p{
 
 $spacing: 15px;
 
-html{
+body {
   min-height: 100vh;
+  min-height: -webkit-fill-available;
+}
+
+html {
+  height: -webkit-fill-available;
 }
 
 // .loader{
@@ -488,7 +493,7 @@ html{
 	.swiper-container .swiper-slide .slide-inner .title{
 		font-size: 40px;
 		line-height: 44px;
-		margin-bottom: 50px;
+		padding-bottom: calc(1rem + env(safe-area-inset-bottom));
 	}
 	.swiper-container .swiper-slide .slide-inner.active .click-project{
 		display: none;
