--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -488,12 +488,13 @@ html {
 		padding: $spacing 20px;
 	}
 	.swiper-container .swiper-slide .slide-inner{
-		height: 100vh;
+		height: 100%;
 	}
 	.swiper-container .swiper-slide .slide-inner .title{
 		font-size: 40px;
 		line-height: 44px;
-		padding-bottom: calc(1rem + env(safe-area-inset-bottom));
+		bottom: calc(1rem + env(safe-area-inset-bottom));
+		position: absolute;
 	}
 	.swiper-container .swiper-slide .slide-inner.active .click-project{
 		display: none;
