--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -489,6 +489,9 @@ html {
 	}
 	.swiper-container .swiper-slide .slide-inner{
 		height: 100%;
+		position: fixed;
+		bottom:0;
+		width:100%;
 	}
 	.swiper-container .swiper-slide .slide-inner .title{
 		font-size: 40px;
